--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -15,6 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;400&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/S__55869455_96.png"/>
     <link rel="manifest" sizes="266x196" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primereact/resources/themes/lara-light-indigo/theme.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primereact/resources/primereact.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primeflex@2.0.0/primeflex.min.css" />
     
     <title>Sigma</title>
   </head>
