--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
     <link rel="stylesheet" href="https://unpkg.com/primereact/resources/themes/lara-light-indigo/theme.css" />
     <link rel="stylesheet" href="https://unpkg.com/primereact/resources/primereact.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.2/primeflex.min.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/primeflex@3.1.2/primeflex.min.css" /> -->
     <title>Sigma</title>
   </head>
   <body >
